--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ APP_SECRET=4b0daaf5871267de00a1246d4056b1d5
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> google/dialogflow ###
+# GOOGLE_APPLICATION_CREDENTIALS=
+###< google/dialogflow ###
