--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "botman/botman": "^2.4",
         "botman/driver-web": "^1.5",
+        "google/cloud-dialogflow": "^0.7.0",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
