--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "ext-iconv": "*",
         "botman/botman": "^2.4",
         "botman/driver-web": "^1.5",
+        "easycorp/easyadmin-bundle": "^2.1",
+        "fzaninotto/faker": "^1.8",
         "google/cloud-dialogflow": "^0.7.0",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.2.*",
