--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,11 +1,10 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        from_database:
+        users:
             entity:
-                class: App\Entity\Admin
-                property: username
-
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -29,9 +28,9 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/profile, roles: ROLE_USER }
 
     encoders:
-        App\Entity\Admin:
+        App\Entity\User:
             algorithm: bcrypt
             cost: 12
