--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=4b0daaf5871267de00a1246d4056b1d5
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://symfony:root@127.0.0.1:3306/chatb
+DATABASE_URL=mysql://symfony:root@127.0.0.1:3306/bot
 ###< doctrine/doctrine-bundle ###
 
 ###> google/dialogflow ###
