--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "easycorp/easyadmin-bundle": "^2.1",
         "fzaninotto/faker": "^1.8",
         "google/cloud-dialogflow": "^0.7.0",
+        "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
