--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -6,5 +6,6 @@ easy_admin:
         - App\Entity\Store
     site_name: '<img style="width: 200px; height: auto;" src="https://images.g2crowd.com/uploads/product/image/social_landscape/social_landscape_1511988551/chatbox.png">'
     design:
+        menu: ['User', 'Product', 'Stock', 'Store', { label: 'Interface chatbot', route: 'interface_admin'}]
         brand_color: 'orange'
         
