--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,26 +9,36 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
             anonymous: true
             logout:
                 path: /logout
                 target: /
 
+            guard:
+                authenticators:
+                    - App\Security\TokenAuthenticator
+
+
             # activate different ways to authenticate
 
             # http_basic: true
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
-            form_login:
+            json_login:
                 check_path: login
+
+
             # https://symfony.com/doc/current/security/form_login_setup.html
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/admin, roles: ROLE_ADMIN }
-         - { path: ^/profile, roles: ROLE_USER}
+
+         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         #- { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/profile, roles: ROLE_USER }
 
     encoders:
         App\Entity\User:
